# lattice-hamiltonian

./: Cargo.toml  README.md
src/: ising.rs  lib.rs  monte_carlo.rs  potts.rs  transfer.rs
tests/: integration.rs
